# mantra-contracts-claimdrop

./: .gitignore  Cargo.toml  README.md  SECURITY.md  justfile  mantrachain.env
.github/: CODEOWNERS
.github/workflows/: pr-conventional-commits-check.yaml  tests-lints.yml
schema/: claimdrop-contract.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_allocation.json  response_to_allocations.json  response_to_authorized_wallets.json  response_to_campaign.json  response_to_claimed.json  response_to_is_authorized.json  response_to_is_blacklisted.json  response_to_rewards.json
scripts/: README.md  add_allocations.json  generate_dummy_addresses.py  merkle_data.csv  merkle_proof.js  merkle_root.js
scripts/emergency/: README.md  close_claimdrop_campaign.js  package.json
src/: commands.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  queries.rs  state.rs
tests/: airdrop_test_data.csv  airdrop_test_data.json  authorized_wallets.rs  bug_large_numbers.rs  dust_on_vesting_ended.rs  hashes.rs  integration.rs  suite.rs  unit.rs  unit_tests.rs
