[package]
name = "claimdrop-contract"
description = "The Claimdrop Contract allows for the creation of airdrop campaigns using merkle roots."
version = "1.1.1"
authors = ["Javier C <javier.m.costa@mantra.finance>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer-arm64:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.1.3"
cosmwasm-std = { version = "2.1.3", features = [
  "cosmwasm_2_1",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.63" }
semver = { version = "1.0.23" }
cw-ownable = { version = "2.1.0" }
cw-utils = { version = "2.0.0" }
cw-migrate-error-derive = { version = "0.1.0" }

[dev-dependencies]
cw-multi-test = {  version = "2.1.0", features = ["cosmwasm_1_4"]  }
bech32 = { version = "0.11.0" }
rand = { version = "0.8.5" }
anyhow = { version = "1.0.71" }
